# forecast

./: .env  Cargo.toml
src/: main.rs
templates/: index.html  stats.html  weather.html
